[project]
name = "blt-lettuce-slack-bot"
version = "1.0.0"
description = "OWASP BLT Lettuce Slack Bot - Interactive Project Finder for Cloudflare Workers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0"}
keywords = ["slack", "bot", "cloudflare", "workers", "owasp", "blt", "python"]
dependencies = [
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
